--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node dist/server.js",
     "dev": "nodemon server.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "build-and-run": "npm run build && npm start"
   },
   "keywords": [],
   "author": "",
